--- a/okSlide/example.html
+++ b/okSlide/example.html
@@ -4,7 +4,7 @@
 <title>jQuery.okSlide</title>
 <meta http-equiv="content-type" content="text/html;charset=utf-8" />
 <meta http-equiv="Content-Style-Type" content="text/css" />
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js" type="text/javascript"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js" type="text/javascript"></script>
 <script type="text/javascript" src="jquery.okSlide.js"></script>
 <link rel="stylesheet" href="screen.css" type="text/css" />
 <link rel="stylesheet" href="jquery.okSlide.css" type="text/css" />
@@ -14,29 +14,43 @@
     var order = [],
         loc   = [];
     $("#slider").okSlide({
-      afterNext: function(e) {
-        order.push(this.innerHTML);
+      panelSelector: "li.panel",
+      afterNext: function() {
+        order.push(this.html());
       },
-      afterPrev: function(e) {
+      afterPrev: function() {
         order.pop();
       },
-      afterSelect: function(e) {
-        e.preventDefault();
-        order.push(this.innerHTML);
+      afterSelect: function() {
+        order.push(this.html());
         alert("Your order: " + order.join(","))
+      },
+      backtrack: function(link){
+        this.find("ul:first").prepend("<li>"+link+"</li>");
       }
     });
-    $("#slider2").okSlide({
-      afterNext: function(e) {
-        loc.push(this.innerHTML);
+    $("#slider2").okSlide({ 
+        panelSelector: "li.panel",
+        vertical:true ,
+        backtrack: function(link){
+          this.find("ul:first").prepend("<li>"+link+"</li>");
+        }
+     });
+
+    $("#slider3").okSlide({
+      panelSelector: "li.panel",
+      afterNext: function() {
+        loc.push(this.html());
       },
-      afterPrev: function(e) {
+      afterPrev: function() {
         loc.pop();
       },
-      afterSelect: function(e) {
-        e.preventDefault();
-        loc.push(this.innerHTML);
+      afterSelect: function() {
+        loc.push(this.html());
         alert("You selected: " + loc.join(","))
+      },
+      backtrack: function(link){
+        this.find("ul:first").prepend("<li>"+link+"</li>");
       }
     });
   });
@@ -54,36 +68,70 @@
       <p>
         An example of a linear series. Appropriate choice for selecting options that are independent of previous choices.
       </p>
-      <div id='slider' class='sliding-menu'>
-        <ul>
-          <li id='main_course' class='panel'>
+      <div class='sliding-menu'>
+        <ul id='slider' >
+          <li id='main-course' class='panel'>
             <h4 class='root selected expanded'>Main course</h4>
             <ul>
-              <li><a href="#" name='side' class='more'>Burger</a></li>
-              <li><a href="#" name="side" class='more'>Steak</a></li>
-              <li><a href="#" name="side" class='more '>Meatloaf</a></li>
+              <li><a href="#side" class='more'>Burger</a></li>
+              <li><a href="#side" class='more'>Steak</a></li>
+              <li><a href="#side" class='more '>Meatloaf</a></li>
             </ul>
           </li>
-          <li id='main_course-side' class='panel'>
+          <li id='side' class='panel'>
             <h4 class='root selected expanded'>Sidedish</h4>
             <ul>
-              <li><a href="#" name='beverage' class="more">French fries</a></li>
-              <li><a href="#" name='beverage' class="more">Salad</a></li>
+              <li><a href="#beverage" class="more">French fries</a></li>
+              <li><a href="#beverage" class="more">Salad</a></li>
             </ul>
           </li>
-          <li id='main_course-side-beverage' class='panel'>
+          <li id='beverage' class='panel'>
             <h4 class='root selected expanded'>Beverage</h4>
             <ul>
-              <li><a href="#" name="dessert" class="more">Water</a></li>
-              <li><a href="#" name="dessert" class="more">Iced Tea</a></li>
-              <li><a href="#" name="dessert" class="more">Beer</a></li>
+              <li><a href="#dessert" class="more">Water</a></li>
+              <li><a href="#dessert" class="more">Iced Tea</a></li>
+              <li><a href="#dessert" class="more">Beer</a></li>
             </ul>
           </li>
-          <li id='main_course-side-beverage-dessert' class='panel'>
+          <li id='dessert' class='panel'>
             <h4 class='root selected expanded'>Dessert</h4>
             <ul>
               <li><a href="#">Cake (it's a lie!)</a></li>
               <li><a href="#">Icecream</a></li>
+            </ul>
+          </li>
+        </ul>
+      </div>
+    </div>
+
+    <div class='ct'>
+      <h4>Vertical</h4>
+      <p>
+        Same as above, but moves vertically.
+      </p>
+      <div class='sliding-menu'>
+        <ul id='slider2' >
+          <li id='numbers' class='panel'>
+            <h4 class='root selected expanded'>Numbers</h4>
+            <ul>
+              <li><a href="#colors" class='more'>One</a></li>
+              <li><a href="#colors" class='more'>Two</a></li>
+              <li><a href="#colors" class='more '>Three</a></li>
+            </ul>
+          </li>
+          <li id='colors' class='panel'>
+            <h4 class='root selected expanded'>Colors</h4>
+            <ul>
+              <li><a href="#shapes" class="more">Red</a></li>
+              <li><a href="#shapes" class="more">Blue</a></li>
+            </ul>
+          </li>
+          <li id='shapes' class='panel'>
+            <h4 class='root selected expanded'>Shapes</h4>
+            <ul>
+              <li><a href="#" class="">Square</a></li>
+              <li><a href="#" class="">Triangle</a></li>
+              <li><a href="#" class="">Circle</a></li>
             </ul>
           </li>
         </ul>
@@ -96,24 +144,24 @@
         An example of a hierarchical series. Appropriate choice for branching
         paths or choices that depend on preceeding options.
       </p>
-      <div id='slider2' class='sliding-menu'>
-        <ul>
+      <div class='sliding-menu'>
+        <ul id='slider3'>
           <li id='continent' class='panel'>
             <h4 class='root selected expanded'>Continent</h4>
             <ul>
-              <li><a href="#" name='na' class='more'>North America</a></li>
-              <li><a href="#" name='eu' class='more'>Europe</a></li>
-              <li><a href="#" name='as' class='more'>Asia</a></li>
+              <li><a href="#na" class='more'>North America</a></li>
+              <li><a href="#eu" class='more'>Europe</a></li>
+              <li><a href="#as" class='more'>Asia</a></li>
             </ul>
           </li>
-          <li id='continent-na' class='panel'>
+          <li id='na' class='panel'>
             <h4 class='root selected expanded'>North America</h4>
             <ul>
-              <li><a href="#" name='us' class='more'>United States</a></li>
-              <li><a href="#" name=''>Canada</a></li>
+              <li><a href="#us" class='more'>United States</a></li>
+              <li><a href="#">Canada</a></li>
             </ul>
           </li>
-          <li id='continent-na-us' class='panel'>
+          <li id='us' class='panel'>
             <h4 class='root selected expanded'>United States</h4>
             <ul>
               <li><a href="#">Los Angeles</a></li>
@@ -121,15 +169,15 @@
               <li><a href="#">Chicago</a></li>
             </ul>
           </li>
-          <li id='continent-eu' class='panel'>
+          <li id='eu' class='panel'>
             <h4 class='root selected expanded'>Europe</h4>
             <ul>
-              <li><a href="#" name="england" class="more">England</a></li>
+              <li><a href="#england" class="more">England</a></li>
               <li><a href="#">France</a></li>
               <li><a href="#">Spain</a></li>
             </ul>
           </li>
-          <li id='continent-eu-england' class='panel'>
+          <li id='england' class='panel'>
             <h4 class='root selected expanded'>England</h4>
             <ul>
               <li><a href="#" >London</a></li>
@@ -137,15 +185,15 @@
               <li><a href="#" >Liverpool</a></li>
             </ul>
           </li>
-          <li id='continent-as' class='panel'>
+          <li id='as' class='panel'>
             <h4 class='root selected expanded'>Asia</h4>
             <ul>
-              <li><a href="#" name="japan" class="more">Japan</a></li>
+              <li><a href="#japan" class="more">Japan</a></li>
               <li><a href="#">China</a></li>
               <li><a href="#">Thailand</a></li>
             </ul>
           </li>
-          <li id='continent-as-japan' class='panel'>
+          <li id='japan' class='panel'>
             <h4 class='root selected expanded'>Japan</h4>
             <ul>
               <li><a href="#" >Tokyo</a></li>
