Allow more flexible validations

--- a/okValidate/example.html
+++ b/okValidate/example.html
@@ -42,7 +42,7 @@
               name
               <em class='required'>(required):</em>
             </label>
-            <input class='required' id='name' name='name' type='text' />
+            <input class='required length[10,20]' id='name' name='name' type='text' />
           </div>
           <div class='form-item'>
             <label for='email'>
