cleaned up example markup

--- a/okCollapse/example.html
+++ b/okCollapse/example.html
@@ -22,10 +22,10 @@
     <h2>Example</h2>
     <ul id='collapsible'>
       <li>
-        <a href="#na" class='more'>North America</a>
-        <ul id='foo'>
+        <a href="#">North America</a>
+        <ul>
           <li>
-            <a href="#us" class='more'>United States</a>
+            <a href="#">United States</a>
             <ul>
               <li><a href="#">Los Angeles</a></li>
               <li><a href="#">New York</a></li>
@@ -36,10 +36,10 @@
         </ul>
       </li>
       <li>
-        <a href="#eu" class='more'>Europe</a>
-        <ul id='bar'>
+        <a href="#">Europe</a>
+        <ul>
           <li>
-            <a href="#england" class="more">England</a>
+            <a href="#">England</a>
             <ul>
               <li><a href="#" >London</a></li>
               <li><a href="#" >Birmingham</a></li>
@@ -51,10 +51,10 @@
         </ul>
       </li>
       <li>
-        <a href="#as" class='more'>Asia</a>
-        <ul id='baz'>
+        <a href="#">Asia</a>
+        <ul>
           <li>
-            <a href="#japan" class="more">Japan</a>
+            <a href="#">Japan</a>
             <ul>
               <li><a href="#" >Tokyo</a></li>
               <li><a href="#" >Kyoto</a></li>
@@ -63,6 +63,12 @@
           </li>
           <li><a href="#">China</a></li>
           <li><a href="#">Thailand</a></li>
+        </ul>
+      </li>
+      <li>
+        <a href="#">Australia</a>
+        <ul>
+          <li><a href="#">Sydney</a></li>
         </ul>
       </li>
     </ul>
