--- a/okTips/example.html
+++ b/okTips/example.html
@@ -4,7 +4,7 @@
 <title>jQuery.okTips</title>
 <meta http-equiv="content-type" content="text/html;charset=utf-8" />
 <meta http-equiv="Content-Style-Type" content="text/css" />
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js" type="text/javascript"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js" type="text/javascript"></script>
 <script type="text/javascript" src="jquery.okTips.js"></script>
 <link rel="stylesheet" href="screen.css" type="text/css" />
 <link rel="stylesheet" href="jquery.okTips.css" type="text/css" />
@@ -31,6 +31,18 @@
   });
 
 </script>
+<style type='text/stylesheet'>
+  .ui-widget-overlay { 
+    background:#121111;
+    opacity:0.5;
+    position: fixed; 
+    top: 0; 
+    left: 0; 
+    width: 100%; 
+    height: 100%; 
+    z-index:1000;
+  }
+</style>
 </head>
 
 <body>
@@ -39,6 +51,7 @@
     <p class='large'>Flexible tooltips and more</p> 
 
     <h2>Demonstration</h2>
+    <p><strong>Click the clicks to trigger a popup:</strong></p>
     <p>
       <a class='basic' title= 'You did a thing!' href='#'>Here's your classic tooltip</a>
     </p>
