--- a/basicWindow/singleWindow-example.html
+++ b/basicWindow/singleWindow-example.html
@@ -5,50 +5,34 @@
 <meta http-equiv="content-type" content="text/html;charset=utf-8" />
 <meta http-equiv="Content-Style-Type" content="text/css" />
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js" type="text/javascript"></script>
+<script type="text/javascript" src="../basicPosition/jquery.basicPosition.js"></script>
 <script type="text/javascript" src="jquery.basicWindow.js"></script>
+<script type="text/javascript" src="jquery.basicWindow.single.js"></script>
 <link rel="stylesheet" href="screen.css" type="text/css" />
+<link rel="stylesheet" href="basicWindow.css" type="text/css" />
 <style type='text/css'>
-  html,body{
-    width:100%;
-    height:100%;
-  }
-  #ui-basicWindow {
-    background:#fefefe;
-    border:1px solid #000;     
-    box-shadow: 10px 10px 5px #888;
-    -webkit-box-shadow: 10px 10px 5px #888;
-    -moz-box-shadow: 10px 10px 5px #888;
-    padding: 5px;
-  }
-
-  #ui-basicWindow-overlay {
-    width:100%;
-    height:100%;
-    background:#000;
-    opacity:0.2;
-  }
 </style>
 <script type='text/javascript'>
   $("#ui-basicWindow-overlay").live("click",function(){
-    $.basicWindow.hide();  // When visible, calling it without arguments closes it
+    $.singleWindow.hide();
   });
 </script>
 </head>
 <body>
   <div id='doc'>
-    <h1>basicWindow</h1>
+    <h1>singleWindow</h1>
     <p class='large'></p>
     <h2>Centered</h2>
     <a id='test-1-trigger' href='#'>Click Me</a>
     <script type='text/javascript'>
       $("#test-1-trigger").click(function(e){
-        $.basicWindow.show("positioned in center", "center");
+        $.singleWindow.show("positioned in center", "center");
       });
     </script>
     <pre>
       <code>
         $("#test-1-trigger").click(function(e){
-          $.basicWindow.show("positioned in center", "center");
+          $.singleWindow.show("positioned in center", "center");
         });
       </code>
     </pre>
@@ -57,13 +41,13 @@
     <a id='test-2-trigger' href='#'>Click Me</a>
     <script type='text/javascript'>
       $("#test-2-trigger").click(function(e){
-        $.basicWindow.show("positioned from content", $("#test-2-content") );
+        $.singleWindow.show("positioned from content", $("#test-2-content") );
       });
     </script>
     <pre>
       <code>
         $("#test-2-trigger").click(function(e){
-          $.basicWindow.show("positioned from content", $("#test-2-content") );
+          $.singleWindow.show("positioned from content", $("#test-2-content") );
         });
       </code>
     </pre>
@@ -71,13 +55,13 @@
     <a id='test-3-trigger' href='#'>Click Me</a>
     <script type='text/javascript'>
       $("#test-3-trigger").click(function(e){
-        $.basicWindow.show("positioned from event",e);
+        $.singleWindow.show("positioned from event",e);
       });
     </script>
     <pre>
       <code>
         $("#test-3-trigger").click(function(e){
-          $.basicWindow.show("positioned from event",e);
+          $.singleWindow.show("positioned from event",e);
         });
       </code>
     </pre>
@@ -85,13 +69,13 @@
     <a id='test-4-trigger' href='#'>Click Me</a>
     <script type='text/javascript'>
       $("#test-4-trigger").click(function(e){
-        $.basicWindow.show("positioned using coordinates 100,100",[100,100])
+        $.singleWindow.show("positioned using coordinates 100,100",[100,100])
       });
     </script>
     <pre>
       <code>
         $("#test-4-trigger").click(function(e){
-          $.basicWindow.show("positioned using coordinates 100,100",[100,100])
+          $.singleWindow.show("positioned using coordinates 100,100",[100,100])
         });
       </code>
     </pre>
