--- a/basicWindow/multiWindow-example.html
+++ b/basicWindow/multiWindow-example.html
@@ -6,30 +6,23 @@
 <meta http-equiv="Content-Style-Type" content="text/css" />
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js" type="text/javascript"></script>
 <script type="text/javascript" src="../basicPosition/jquery.basicPosition.js"></script>
+<script type="text/javascript" src="../basicElement/jquery.basicElement.js"></script>
+<script type="text/javascript" src="jquery.basicWindow.single.js"></script>
 <script type="text/javascript" src="jquery.basicWindow.multi.js"></script>
 <link rel="stylesheet" href="screen.css" type="text/css" />
-<style type='text/css'>
-  html,body{
-    width:100%;
-    height:100%;
-  }
-  .ui-window-multi {
-    background:#fefefe;
-    border:1px solid #000;     
-    box-shadow: 10px 10px 5px #888;
-    -webkit-box-shadow: 10px 10px 5px #888;
-    -moz-box-shadow: 10px 10px 5px #888;
-    padding: 5px;
-  }
-
-  .ui-basicWindow-overlay {
-    width:100%;
-    height:100%;
-    background:#000;
-    opacity:0.2;
-  }
-</style>
+<link rel="stylesheet" href="basicWindow.css" type="text/css" />
 <script type='text/javascript'>
+  $.multiWindow.setup({
+    show: function(content) {
+      return $("<div id='ui-window' class='ui-window'></div>")
+         .html(content)
+         .appendTo("body")
+         .show();     
+		},                  
+		hide: function(el){
+		 	el.hide();	
+		}
+  });
   $("#clear-all").live("click",function(){
     $.multiWindow.hide();  // Calling it without arguments closes all windows
   });
