--- a/basicWindow/singleWindow-example.html
+++ b/basicWindow/singleWindow-example.html
@@ -6,6 +6,7 @@
 <meta http-equiv="Content-Style-Type" content="text/css" />
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js" type="text/javascript"></script>
 <script type="text/javascript" src="../basicPosition/jquery.basicPosition.js"></script>
+<script type="text/javascript" src="../basicElement/jquery.basicElement.js"></script>
 <script type="text/javascript" src="jquery.basicWindow.js"></script>
 <script type="text/javascript" src="jquery.basicWindow.single.js"></script>
 <link rel="stylesheet" href="screen.css" type="text/css" />
@@ -13,7 +14,23 @@
 <style type='text/css'>
 </style>
 <script type='text/javascript'>
-  $("#ui-basicWindow-overlay").live("click",function(){
+  $.singleWindow.setup({
+		init: function(){
+			this.container  = $("<div id='ui-window' class='ui-window'></div>" ).appendTo("body").hide();
+			this.overlay    = $("<div id='ui-overlay' class='ui-overlay'></div>" ).appendTo("body").hide();
+		},
+    show: function(content) {
+		 this.overlay.show(); 
+		 return this.container
+			 .html(content)
+			 .show();     
+		},                  
+		hide: function(){
+		 	this.overlay.hide();	
+		 	this.container.hide();	
+		}
+  });
+  $("#ui-overlay").live("click",function(){
     $.singleWindow.hide();
   });
 </script>
