[basicWindow] Fix example

--- a/basicWindow/multiWindow-example.html
+++ b/basicWindow/multiWindow-example.html
@@ -20,7 +20,7 @@
          .show();     
 		},                  
 		hide: function(el){
-		 	el.hide();	
+		 	el.hide().remove();	
 		}
   });
   $("#clear-all").live("click",function(){
