--- a/okDrag/example.html
+++ b/okDrag/example.html
@@ -10,10 +10,15 @@
     <script type="text/javascript">
       $(document).ready(function(){
         $("#list0").okDrag();
-        $("#list1, #list2,#list3").okDrag({ 
+        $("#list1").okDrag({
           dragBetween: true, 
-          placeHolderTemplate: "<li class='placeHolder'><div></div></li>",
           handleSelector: "div"
+        });
+        $("#list2, #list3,#list4").okDrag({ 
+          placeHolderTemplate: "<li class='placeHolder-2d'><div></div></li>",
+          dragBetween: true, 
+          handleSelector: "div",
+          allowNested: false
         });
       });
     </script>
@@ -39,9 +44,36 @@
       <li>violet</li>
     </ul>
 
+    <h3>Nested Lists</h3>
+
+    <ul id='list1' class="nested">
+      <li id="list_1"><div>Item 1</div>
+      <li id="list_2"><div>Item 2</div>
+        <ul>
+          <li id="list_3"><div>Sub Item 1.1</div>
+          <li id="list_4"><div>Sub Item 1.2</div>
+          <li id="list_5"><div>Sub Item 1.3</div>
+          <li id="list_6"><div>Sub Item 1.4</div>
+        </ul>
+      <li id="list_7" ><div>Item 3</div>
+      <li id="list_8" ><div>Item 4</div>
+      <li id="list_9"><div>Item 5</div>
+      <li id="list_10"><div>Item 6</div>
+        <ul>
+          <li id="list_11"><div>Sub Item 1</div>
+          <li id="list_12"><div>Sub Item 2</div>
+          <li id="list_13"><div>Sub Item 3</div>
+          <li id="list_14"><div>Sub Item 4</div>
+        </ul>
+      <li id="list_15"><div>Item 7</div>
+      <li id="list_16"><div>Item 8</div>
+    </ul>
+
+    <div class='clear'></div>
+
     <h3>2D list with drag and drop between lists:</h3>
 
-    <ul id="list1" class='list2d'>
+    <ul id="list2" class='list2d'>
       <li><div>1</div></li>
       <li><div>2</div></li>
       <li><div>3</div></li>
@@ -53,7 +85,7 @@
       <li><div>9</div></li>
     </ul>
 
-    <ul id="list2" class='list2d'>
+    <ul id="list3" class='list2d'>
       <li><div>10</div></li>
       <li><div>11</div></li>
       <li><div>12</div></li>
@@ -68,7 +100,7 @@
     <div class='clear'>
     </div>
     <h4>Empty List</h4>
-    <ul id='list3' class='list2d'>
+    <ul id='list4' class='list2d'>
     </ul>
     <div class='clear'></div>
     <h2>Just some extra space to test screen scrolling</h2>
