--- a/okSuggest/example.html
+++ b/okSuggest/example.html
@@ -32,7 +32,7 @@
     <h2>Demonstration</h2>
     <form action="" method="post" accept-charset="utf-8">
       <fieldset>
-        <h3>okSuggest on an select</h3>
+        <h3>okSuggest used on a select</h3>
         <label>Pick an Animal</label>
         <p class="field">
           <select id="animals" name="animals" >
@@ -222,12 +222,12 @@
             <option value="183">zebu</option>
           </select>
         </p>
-        <h3>okSuggest on an input (with existing value)</h3>
+        <h3>okSuggest used on an input (with existing value)</h3>
         <label>Pick a Country</label>
         <p class="field">
           <input type="text" id="countries" name="countries" value="United States" />
         </p>
-        <h3>okSuggest on an input (without an existing value)</h3>
+        <h3>okSuggest used on an input (without an existing value)</h3>
         <label>Pick an US President</label>
         <p class="field">
           <input type="text" id="presidents" name="presidents" value="" />
